<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:background="#FAFAFA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/black"
            android:layout_marginTop="16dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:background="#DDDDDD"
            android:contentDescription="@string/selected_image"/>

        <!-- Başlık -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_name_label"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#212121"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Açıklama -->
        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:textSize="16sp"
            android:textColor="#555555"
            android:layout_marginBottom="32dp"
            android:lineSpacingExtra="6dp" />

        <!-- 🔴 Sil Butonu -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:onClick="delete"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="#D32F2F"
            app:cornerRadius="24dp"/>
    </LinearLayout>
</ScrollView>

